--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button>Hello</button>
+    <button style="background-color: red; color:white; border-radius: 30%;">Hello</button>
 </body>
 </html>
