--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button style="background-color: red; color:white; border-radius: 30%;">Hello</button>
+    <button style="background-color: rgb(184, 73, 73); color:white; border-radius: 10%; border: none; cursor: pointer;">Hello</button>
 </body>
 </html>
